# vnet-tensorflow

./: .gitattributes  .gitignore  Dockerfile  Layers.py  NiftiDataInput.py  NiftiDataset.py  NiftiDataset2D.py  NiftiDataset3D.py  OutputModule.py  README.md  VNet.py  attention.py  batch_evaluate.py  config.json  config_sample.json  evaluate.py  layers2.py  main.py  meta_to_pb.py  model.py  networks.py  requirements.txt  test.py  train.py
configs/: config.json  config_sample.json
cxx/: CMakeLists.txt  README.md  main.cxx  tf_inference.cpp  tf_inference.h
data/evaluate/2/: image.nii  label.nii
data/testing/1/: image.nii  label.nii
data/training/0/: image.nii  label.nii
pipeline/: NiftiDataset2D.py  NiftiDataset3D.py  pipeline.py  pipeline2D.yaml  pipeline3D.yaml
utils/: batch_evaluate.py  batch_evaluate_step.py  batch_evaluate_stride.py
utils/batch_evaluate/: README.md  batch_evaluate.py  batch_evaluate_step.py  batch_evaluate_stride.py  main.py
utils/bounding_box/: README.MD  batch_bbox.py  bbox.py  classnames.json  main.py
utils/prepare_data/: README.md  adam_unzip.py  binarize.py  check_header_consistency.py  image_fit_label.py  image_partition.py  lits.py  unify_header.py
